# noise-gate

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
benches/: throughput.rs
examples/: wav-splitter.rs
src/: lib.rs
