[package]
name = "noise-gate"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
license = "MIT or Apache-2.0"
description = "A basic Noise Gate for recording bursts of sound above a specified threshold."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sample = "0.10"

[dev-dependencies]
hound = "3.4.0"
criterion = "0.3"
structopt = "0.3.3"

[[bench]]
name = "throughput"
harness = false
